# ComodoreProject

./: .clangd  CMakeLists.txt  GameConfig.h  Screen.c  debug_charset.c  debug_charset.h  main.c  program.prg
Card/: Card.c  Card.h  CardManager.c  CardManager.h
Demo/: Demo.c  Demo.h  DemoScreen.c
Game/: Game.c  Game.h
ObjectLoader/: ObjectLoader.c  ObjectLoader.h
Objects/: Stack.c
OptionsScreen/: Options.c  Options.h  OptionsScreen.c
Player/: Player.c  Player.h
ScreenLoader/: ScreenLoader.c  ScreenLoader.h  Screens.h
ScreenManager/: ScreenManager.c  ScreenManager.h
TitelScreen/: Titel.c  Titel.h  TitelScreen.c
